# RVC-Core

./: .gitignore  CODEBASE_SLIMMING_REPORT.md  MIT协议暨相关引用库协议  PROJECT_FILE_GUIDE.md  README.md  REDUNDANCY_AUDIT.md  REDUNDANCY_STATIC_REVIEW.md  SRC_STATIC_REVIEW.md  pyproject.toml  requirements.txt
configs/: base.yaml  config.json  config.py  mute.yaml  project_config.py  project_loading.py  project_paths.py  project_runtime.py  project_sections.py  project_snapshot.py
infer/: structure.md
infer/lib/: rmvpe.py
src/: __init__.py  rvc_profiles.py
src/features/: __init__.py  f0.py  hubert.py  hubert_fairseq_compat.py  mel.py
src/index/: __init__.py  __main__.py  build_v1.py  build_v2.py  builder.py  cli.py  common.py  retrieval.py
src/infer/: __init__.py  batch.py  model_utils.py  pipeline.py  service.py  voice_converter.py
src/models/: __init__.py  (+5 more)
tests/: __init__.py  cuda_numeric_probe.py  equivalence_helpers.py  test_audio_utils.py  test_checkpoint_export.py  test_equivalence_f0.py  test_equivalence_features.py  test_equivalence_index.py  test_equivalence_infer.py  test_equivalence_preprocess.py  test_equivalence_source_coverage.py  test_equivalence_visual.py  test_feature_helpers.py  test_hubert_parity.py  test_index_cli.py  test_preprocess_cli_args.py  test_preprocess_common.py  test_preprocess_pipeline.py  test_project_loading.py  test_train_checkpoints.py  test_train_hparams.py  test_train_strict_runtime.py  test_train_validation_config.py
tools/: calc_rvc_model_similarity.py  dlmodels.bat  dlmodels.sh  download_models.py  migrate_layout.py
(+48 files in other folders)
