[tool.poetry]
name = "rvc-beta"
version = "0.1.0"
description = ""
authors = ["lj1995"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
torch = "2.4.0"
torchaudio = "2.4.0"
Cython = "^3.0.11"
faiss-cpu = "1.7.3"
llvmlite = "0.39.0"
matplotlib = ">=3.7.0"
numba = "0.56.4"
numpy = "1.23.5"
scipy = "1.13.1"
praat-parselmouth = ">=0.4.2"
pyworld = "0.3.2"
resampy = ">=0.4.2"
scikit-learn = "^1.5.1"
tensorboard = "^2.17.0"
tqdm = ">=4.63.1"
PyYAML = ">=6.0"
pyasn1 = ">=0.4.8"
pyasn1-modules = ">=0.2.8"
torchcrepe = "0.0.20"
python-dotenv = ">=1.0.0"
joblib = ">=1.1.0"
torchvision = "0.19.0"
[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
