[tool.poetry]
name = "rvc-beta"
version = "0.1.0"
description = ""
authors = ["lj1995"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
torch = "2.4.0"
torchaudio = "2.4.0"
faiss-cpu = "1.7.3"
matplotlib = ">=3.7.0"
numpy = "1.23.5"
scipy = "1.13.1"
resampy = ">=0.4.2"
scikit-learn = "^1.5.1"
tensorboard = "^2.17.0"
tqdm = ">=4.63.1"
PyYAML = ">=6.0"
torchvision = "0.19.0"
[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
